[package]
name = "receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "1", features = ["serde", "uuid", "export"] }
sqlx = { version = "0.7", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
specta = { version = "1", features = ["serde", "uuid", "export", "typescript"] }
specta-typescript = "0.0.7"
uuid = { version = "1", features = ["serde", "v4"] }
